<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/txt2"
        android:layout_width="328dp"
        android:layout_height="72dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="serif"
        android:text="@string/NayanaKarunaratne"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.626"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.093" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="185dp"
        android:layout_height="146dp"
        android:layout_marginBottom="8dp"
        android:background="#F57C00"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.305"
        app:srcCompat="@drawable/beauty2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="308dp"
        android:layout_height="166dp"
        android:text='Nayana Karunaratne has undergone extensive training at globally acclaimed institutions. Alan School of Hairdressing and Raymond Young School of Beauty in London, Rever (Hong Kong) Hairdressing School, Wella Germany, Lancôme Paris, Elizabeth Arden Singapore, Schwarzkopf Professional in Germany, L"Oréal, Pivot Point, Vidal Sassoon and Tony and Guy UK. '
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.734" />

    <Button
        android:id="@+id/next2"
        android:layout_width="91dp"
        android:layout_height="38dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/custom_rounded_corners"
        android:text="@string/next2"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/app2"
        android:layout_width="197dp"
        android:layout_height="38dp"
        android:layout_marginStart="24dp"
        android:background="@drawable/custom_rounded_corners"
        android:text="@string/selectapp"
        android:textColor="#FFFFFF"
        app:layout_constraintBaseline_toBaselineOf="@+id/next2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>